# rust_object_detection

./: Cargo.toml
src/: main.rs
src/app/: gpu_info.rs  image_utils.rs  mod.rs  vgg.rs
src/layers/: conv.rs  dense.rs  maxpool.rs  mod.rs  utils.rs
