[package]
name = "rust_object_detection"
version = "0.1.0"
edition = "2024"

[dependencies]
cudarc = { version = "0.16.4", features = ["std", "f16", "cuda-11080"] }
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
image = "0.25.6"
tch = { version = "0.17.0" }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bytes = "1.10.1"
futures-util = "0.3.31"
multer = "3.1.0"
uuid = { version = "1.17.0", features = ["v4"] }
nvml-wrapper = "0.11.0"

[dependencies.reqwest]
version = "0.12.19"
features = ["json", "multipart"]

[dev-dependencies]
approx = "0.5.1"